--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       //alerta(msg);
     msglocal = mensagem;
   }
-    alerta('olá humans');
+    alerta('hello humans');
     alert(msglocal);
     //alerta();
   </script>
