--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function redefinirMsg(){
 
 <main>
     <a href="https://github.com/Geovanearaujo?tab=repositories">
-    <img src="" alt="logo">
+    <img src="robo.png" alt="logo">
   </a>
     <h1 class "robot-name">|Olá Humanos|</h1>
     <h2 align="center" class "headline"> HISTÓRIA DA ROBÓTICA </h2>
@@ -93,7 +93,7 @@ Atualmente, robots como o Shakey continuam a ser utilizados, particularmente com
 
 <h1 align="center" class="headline2"> Reprodução do nicho de animais, em robos:</h1>
 <div class="media">
- <iframe  width="100%" height="100%" src="https://www.youtube.com/watch?v=O2Q3epki3KQ"frameborder="0" allowfullscreen>; </iframe>
+ <iframe  width="100%" height="100%" src="https://www.youtube.com/watch?v=O2Q3epki3KQ" frameborder="0" allowfullscreen>; </iframe>
    </div>
 </main>
 </body>
